--- a/package.json
+++ b/package.json
@@ -29,68 +29,68 @@
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
-    "@hookform/resolvers": "^4.1.0",
-    "@ncdai/react-wheel-picker": "^1.0.13",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@ncdai/react-wheel-picker": "^1.0.19",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.13",
-    "fumadocs-core": "^15.5.0",
-    "jotai": "^2.12.5",
-    "libphonenumber-js": "^1.12.4",
+    "dayjs": "^1.11.19",
+    "fumadocs-core": "^15.8.5",
+    "jotai": "^2.16.1",
+    "libphonenumber-js": "^1.12.33",
     "lucide-react": "^0.516.0",
-    "motion": "^12.18.1",
-    "next": "15.4.8",
+    "motion": "^12.23.26",
+    "next": "15.4.10",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.2",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
-    "react-confetti": "^6.3.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.69.0",
     "react-markdown": "^10.1.0",
     "react-use": "^17.6.0",
     "schema-dts": "^1.1.5",
     "shadcn": "2.6.4",
-    "sharp": "^0.34.3",
-    "sonner": "^2.0.5",
-    "swr": "^2.3.3",
-    "tailwind-merge": "^3.3.1",
+    "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
+    "swr": "^2.3.8",
+    "tailwind-merge": "^3.4.0",
     "vcard-creator": "^0.7.2",
-    "zod": "^3.24.2"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^20.14.12",
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.19.27",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "eslint": "^9.22.0",
+    "eslint": "^9.39.2",
     "eslint-config-next": "15.4.4",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-boundaries": "^5.3.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "gray-matter": "^4.0.3",
     "husky": "^9.1.7",
     "libphonenumber-metadata-generator": "^1.1.0",
-    "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "puppeteer-core": "^24.10.1",
+    "puppeteer-core": "^24.34.0",
     "rehype-external-links": "^3.0.0",
-    "rehype-pretty-code": "^0.14.0",
+    "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "rimraf": "^6.0.1",
+    "rimraf": "^6.1.2",
     "shiki": "1.9.1",
-    "strip-indent": "^4.0.0",
-    "tailwindcss": "^4.1.11",
-    "tsx": "^4.19.3",
-    "tw-animate-css": "^1.3.4",
+    "strip-indent": "^4.1.1",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "5.7.3",
     "unist-builder": "3.0.0",
     "unist-util-visit": "^5.0.0"
@@ -99,5 +99,5 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6"
   },
-  "packageManager": "pnpm@8.15.9+sha512.499434c9d8fdd1a2794ebf4552b3b25c0a633abcee5bb15e7b5de90f32f47b513aca98cd5cfd001c31f0db454bc3804edccd578501e4ca293a6816166bbd9f81"
+  "packageManager": "pnpm@8.15.9"
 }
