--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@bprogress/next": "^3.2.12",
     "@hookform/resolvers": "^4.1.3",
     "@ncdai/react-wheel-picker": "^1.0.19",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-slot": "^1.2.4",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "class-variance-authority": "^0.7.1",
